--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </a>
     </div>
     <div class="image-wrapper">
-      <img src="images/wild-robot.png" alt="">
+      <img src="linkedin-profile.jpg" alt="">
     </div>
   </div>
 
