--- a/index.html
+++ b/index.html
@@ -10,31 +10,18 @@
 
 <body>
 
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About me</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Courses</a></li>
-        <li><a href="#">Games</a></li>
-        <li><a href="#">Movies</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <div class="hero-section content">
-    <div class="information">
-      <h1>Hi, I'm John Doe</h1>
-      <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem aliquam repudiandae aperiam soluta modi vitae
-        possimus adipisci veritatis, officiis rerum iste animi sequi sint commodi quo nobis mollitia, officia odio?
-      </h2>
-      <a href="#" class="read-more-button">
-        Read more
-      </a>
+  <div class="hero-section">
+    <div class="text-content">
+      <h2>Hoi, ik ben</h2>
+      <h1>Peter Marcelis</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam iusto voluptatem tempora, officia velit earum
+        tempore molestias recusandae reprehenderit iure fugiat, enim libero. Libero totam praesentium officia minima,
+        temporibus repudiandae.</p>
+      <a href="#" class="explore-more">Zie meer</a>
     </div>
+
     <div class="image-wrapper">
-      <img src="linkedin-profile.jpg" alt="">
+      <img src="linkedin-profile.jpg" alt="foto">
     </div>
   </div>
 
