--- a/index.html
+++ b/index.html
@@ -10,20 +10,23 @@
 
 <body>
 
-  <div class="hero-section">
-    <div class="text-content">
-      <h2>Hoi, ik ben</h2>
-      <h1>Peter Marcelis</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam iusto voluptatem tempora, officia velit earum
-        tempore molestias recusandae reprehenderit iure fugiat, enim libero. Libero totam praesentium officia minima,
-        temporibus repudiandae.</p>
-      <a href="#" class="explore-more">Zie meer</a>
-    </div>
+  <div class="container">
 
-    <div class="image-wrapper">
-      <img src="linkedin-profile.jpg" alt="foto">
+    <div class="hero-section content">
+      <div class="text-content">
+        <h2>Hoi, ik ben</h2>
+        <h1>Peter Marcelis</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam iusto voluptatem tempora, officia velit earum
+          tempore molestias recusandae reprehenderit iure fugiat, enim libero. Libero totam praesentium officia minima,
+          temporibus repudiandae.</p>
+          <a href="#" class="explore-more">Zie meer</a>
+        </div>
+        
+        <div class="image-wrapper">
+          <img src="linkedin-profile.jpg" alt="foto">
+        </div>
+      </div>
     </div>
-  </div>
 
 </body>
 
