--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 
 <body>
 
-  <div class="container">
+  <div class="container">`
 
-    <div class="hero-section content">
+    <div class="hero-section">
+
       <div class="text-content">
         <h2>Hoi, ik ben</h2>
         <h1>Peter Marcelis</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam iusto voluptatem tempora, officia velit earum
-          tempore molestias recusandae reprehenderit iure fugiat, enim libero. Libero totam praesentium officia minima,
-          temporibus repudiandae.</p>
-          <a href="#" class="explore-more">Zie meer</a>
-        </div>
-        
-        <div class="image-wrapper">
-          <img src="linkedin-profile.jpg" alt="foto">
-        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatibus quam tenetur nulla ea maiores
+          incidunt fugiat ex ipsa! Repellat, voluptatem. Quos nihil impedit id rem corrupti quaerat similique maiores!
+        </p>
+        <a href="#">Zie meer</a>
       </div>
-    </div>
 
+      <div class="image-wrapper">
+        <img src="lelijke-studenten.jpg" alt="">
+      </div>
+
+    </div>
+  </div>
 </body>
 
 </html>
