--- a/index.html
+++ b/index.html
@@ -39,23 +39,11 @@
     <div class="about-me-wrapper">
       <h2>About</h2>
       <h1>About me</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere explicabo, aperiam iusto quos cum maxime quaerat odit velit, pariatur debitis voluptatem, perspiciatis sequi saepe ut ducimus architecto. Quia, deleniti minima?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere explicabo, aperiam iusto quos cum maxime
+        quaerat odit velit, pariatur debitis voluptatem, perspiciatis sequi saepe ut ducimus architecto. Quia, deleniti
+        minima?</p>
     </div>
 
-  </div>
-
-  <div class="skills-container">
-    <h2>Skills</h2>
-    <h1>What am I capable of?</h1>
-    
-    <div class="icon-container">
-      <img src="linkedin-profile.jpg" alt="">
-      <img src="linkedin-profile.jpg" alt="">
-      <img src="linkedin-profile.jpg" alt="">
-      <img src="linkedin-profile.jpg" alt="">
-      <img src="linkedin-profile.jpg" alt="">
-      <img src="linkedin-profile.jpg" alt="">
-    </div>
   </div>
 
 </body>
